# companion_service

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  package.json
scripts/: build-macos-pkg.sh  build-macos-updater-artifacts.sh  build-tray-macos.sh  build-tray-windows.ps1  build-windows-msi.ps1  test-critical.mjs  windows-build-plan.mjs  windows-msi-plan.mjs
src/: acp-auth.mjs  acp-auth.test.mjs  acp-diagnostics.mjs  acp-events.mjs  acp-lifecycle.mjs  acp-process.mjs  acp-process.test.mjs  acp-routes.mjs  acp-session.mjs  acp-session.test.mjs  approval-store.mjs  approval-store.test.mjs  automation-budget-store.mjs  automation-budget-store.test.mjs  automation-budget.mjs  automation-budget.test.mjs  automation-condition-engine.mjs  automation-condition-engine.test.mjs  automation-condition-state.mjs  automation-condition-state.test.mjs  automation-executor.mjs  automation-executor.test.mjs  automation-lifecycle.mjs  automation-lifecycle.test.mjs  automation-outbox.mjs  automation-outbox.test.mjs  automation-recipe-pack.mjs  automation-recipe-pack.test.mjs  automation-rollup-store.mjs  automation-rollup-store.test.mjs  automation-rollup.mjs  automation-rollup.test.mjs  automation-runtime.e2e.test.mjs  automation-session-quality.mjs  automation-session-quality.test.mjs  automation-session-store.mjs  automation-spec.mjs  (+59 more)
tray/: Cargo.toml  tauri.conf.json
tray/capabilities/: default.json
tray/src/: autostart.rs  config.rs  daemon.rs  health.rs  lib.rs  main.rs  models.rs  preferences.rs  startup.rs  tray.rs  update.rs  window.rs
tray/ui/: index.html
(+14 files in other folders)
