[package]
name = "trapezohe-companion-tray"
version = "0.1.12"
edition = "2021"

[lib]
name = "trapezohe_companion_tray"
path = "src/lib.rs"

[[bin]]
name = "trapezohe-companion-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tempfile = "3"
